<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".HealthTips">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="HEALTH TIPS"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:justificationMode="inter_word"
        android:textStyle="italic" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:layout_marginTop="10sp"
        android:src="@drawable/download" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip2"
        android:layout_marginTop="15sp"
        android:textSize="20sp"
        android:justificationMode="inter_word"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Learn_more"
        android:textSize="20sp"
        android:textStyle="italic"
        />

</LinearLayout>