<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0EAED"

    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="108dp"
        android:background="@color/purple"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="146dp"
            android:layout_height="93dp"
            android:paddingLeft="40dp"
            app:srcCompat="@drawable/d4" />

        <LinearLayout
            android:layout_width="241dp"
            android:layout_height="95dp"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:paddingTop="20dp"
                android:text="Dr. Kavya Patil"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="205dp"
                android:layout_height="48dp"
                android:padding="5dp"
                android:text="@string/d3" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="622dp"
        android:background="#D0EAED"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="344dp"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:text="Qualification :"
            android:textColor="#130E0E"
            android:textSize="20sp" />

        <TextView

            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"

            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:gravity="center"

            android:hint="@string/d2"
            android:padding="8dp"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="#151212" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="368dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="20dp"
            android:text="Experience :"
            android:textColor="#131111"
            android:textColorHint="#0B0909"
            android:textSize="20sp" />

        <TextView

            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"

            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:gravity="center"

            android:hint="@string/d1"
            android:padding="8dp"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="#100D0D" />

        <Button
            android:id="@+id/button5"
            android:layout_width="251dp"
            android:layout_height="68dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:backgroundTint="#FAF5F5"
            android:text="Book Now"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>